<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">InverterTerminal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_head">变频器通讯参数设置为：波特率9600，奇校验，数据位8位，停止位1位，站号为0</string>
    <string name="openSCI_sucssess">串口开启成功</string>
    <string name="closeSCI_sucssess">关闭串口成功</string>
    <string name="text_status">变频器状态：</string>
    <string name="text_velocity">变频器速度为(r/min)：</string>
    <string name="text_current">变频器电流为(A)：</string>
    <string name="text_ram_frq">RAM频率为(Hz)：</string>
    <string name="text_prom_frq">E2PROM频率为(Hz)：</string>
    <string name="alarm_title">报警缩写：</string>
    <string name="alarm_name">报警名称：</string>
    <string name="alarm_content">报警内容：</string>
    <string name="alarm_checkPoint">检查要点：</string>
    <string name="alarm_handle">处理方法：</string>
    <string name="alarm_contentDes">报警内容</string>
    <string name="menu_alarm_item">报警查询</string>
    <string name="btn_reset">复位</string>
    <string name="loading">操作中，请稍后</string>
    <string name="setting">参数设置</string>
    <string name="menu_more">设置</string>
    <string name="password">请输入主机密码</string>
    <string name="login">登陆</string>

</resources>
