<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.XD.inverterterminal.MainActivity" >

    <TextView
        android:id="@+id/text_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_head"
        android:textSize="12sp" />    
	<Button 
        android:id="@+id/btn_reset"
        android:layout_width="70dp"
	    android:layout_height="35dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_reset"
        android:background="@drawable/btn_light_blue"
        android:gravity="center"
        android:textColor="#fff"
	    android:textSize="18sp"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"/>
	
    <RelativeLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_head"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
	    <LinearLayout
	            android:id="@+id/layout_sci"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginBottom="10dp" >
		    <Button
		        android:id="@+id/Sci_init"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:onClick="onSciClick"
		        android:text="开启串口"
		        android:textSize="18sp" />
		    <Button
		        android:id="@+id/Sci_close"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:onClick="onSciClick"
		        android:text="关闭串口"
		        android:textSize="18sp" />

	    </LinearLayout>
	    <LinearLayout
            android:id="@+id/layout_move"
            android:layout_below="@id/layout_sci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
			
	        <LinearLayout
	            android:id="@+id/bg_run"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/transparent">
	            <Button
	                android:id="@+id/button_run"
	                android:layout_width="150dp"
	                android:layout_height="45dp"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:layout_marginTop="5dp"
	                android:layout_marginBottom="5dp"
	                android:onClick="onButtonClick"
	                android:textColor="#fff"
	                android:text="正转"
	                android:background="@drawable/btn_light_green"
	                android:textSize="20sp" />
			</LinearLayout>
            <LinearLayout
                android:id="@+id/bg_reverse"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dp"
		        android:layout_marginRight="5dp"
	            android:background="@drawable/transparent">
	            <Button
	                android:id="@+id/button_reverse"
	                android:layout_width="150dp"
	                android:layout_height="41dp"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:layout_marginTop="7dp"
	                android:layout_marginBottom="7dp"
	                android:onClick="onButtonClick"
	                android:textColor="#fff"
	                android:background="@drawable/btn_gray"
	                android:text="反转"
	                android:textSize="20sp" />
			</LinearLayout>
        </LinearLayout>
       	<LinearLayout
       	    android:id="@+id/bg_stop"
       	    android:layout_below="@id/layout_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
            android:background="@drawable/transparent">
	        <Button
	                android:id="@+id/button_stop"
	                android:layout_width="150dp"
	                android:layout_height="45dp"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:layout_marginTop="5dp"
	                android:layout_marginBottom="5dp"
	                android:onClick="onButtonClick"
	                android:textColor="#fff"
	                android:background="@drawable/btn_red"
	                android:text="停止"
	                android:textSize="20sp" />
        </LinearLayout>
	    <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_alignParentRight="true"
	            android:layout_marginTop="10dp"
	            android:layout_marginRight="130dp"
	            android:gravity="right" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_status"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_velocity"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_current"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_ram_frq"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_prom_frq"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
	    </LinearLayout>
	    <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_alignParentRight="true"
	            android:layout_marginTop="10dp"
	            android:layout_marginRight="20dp"
	            android:gravity="right" >

		    <TextView
		        android:id="@+id/text_status"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="正常"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:id="@+id/text_velocity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="0"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:id="@+id/text_current"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="0"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:id="@+id/text_ram"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="0"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		    <TextView
		        android:id="@+id/text_prom"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="0"
		        android:textSize="18sp"
		        android:layout_marginTop="5dp"
	    		android:layout_marginBottom="5dp" />
		 </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_below="@id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" >
               
        <LinearLayout
            android:id="@+id/layout_setFrq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:focusable="true"  
   			android:focusableInTouchMode="true">
			
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
            	android:layout_marginBottom="10dp">
	            <EditText
	                android:id="@+id/edtext_ram"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:maxLength="2"
	                android:numeric="integer"
	                android:hint="输入频率值"
	                android:imeOptions="actionDone" />
	
	            <Button
	                android:id="@+id/button_setfrq_ram"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:onClick="onButtonClick"
	                android:text="设定频率(RAM)" />
			</LinearLayout>
	        <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
            	android:layout_marginBottom="10dp" >
            	<EditText
	                android:id="@+id/edtext_prom"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:maxLength="2"
	                android:numeric="integer"
	                android:hint="输入频率值" />
	                        
	            <Button
	                android:id="@+id/button_setfrq_prom"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:onClick="onButtonClick"
	                android:text="设定频率(RAM和E2PROM)" />
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_toRightOf="@id/layout_setFrq"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView 
	            android:layout_marginTop="50dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="频率调节\n（增/减1Hz）"
	            android:textSize="17sp"
	            android:maxLines="2"/>
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_marginLeft="30dp">
	            <ImageButton
	                android:contentDescription="@null" 
	                android:id="@+id/imgbtn_up"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_margin="5dp" 
					android:src="@drawable/imgbtn_up"
					android:scaleType="fitXY"
					android:onClick="onButtonClick" />
	            <ImageButton 
	                android:contentDescription="@null"
	                android:id="@+id/imgbtn_down"
					android:layout_width="80dp"
					android:layout_height="80dp" 
					android:layout_margin="5dp"
					android:src="@drawable/imgbtn_down"
					android:scaleType="fitXY"
					android:onClick="onButtonClick" />
	        </LinearLayout>
	    </LinearLayout>
        <!-- <LinearLayout
            android:layout_below="@id/linearLayout_3"
            android:id="@+id/linearLayout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/text_ram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="当前频率值(RAM)" />

            <Button
                android:id="@+id/button_getfrq_ram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:onClick="onButtonClick"
                android:text="读出频率(RAM)" />

            <TextView
                android:id="@+id/text_prom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="当前频率值(E2PROM)" />
                        
            <Button
                android:id="@+id/button_getfrq_prom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:onClick="onButtonClick"
                android:text="读出频率(RAM和E2PROM)" />
        </LinearLayout> -->
	</RelativeLayout>
</RelativeLayout>
